--- a/values.yaml
+++ b/values.yaml
@@ -10,7 +10,7 @@
 solace:
   # solace.redundancy=false will create a single-node non-HA deployment;
   #  true will create an HA deployment with Primary, Backup and Monitoring nodes.
-  redundancy: true
+  redundancy: false
 
   # solace.systemScaling provides exact fine-grained specification of the event broker scaling parameters
   #   and the assigned CPU / memory resources to the Pod
