--- a/values.yaml
+++ b/values.yaml
@@ -194,9 +194,9 @@ storage:
   # storage.customVolumeMount enables specifying a YAML fragment how the data volume should be mounted.
   #   If customVolumeMount is defined the rest of the storage params will be ignored
   #   This example shows how to mount the PubSub+ data volume from an existing pvc "test-claim". Ensure to preserve indentation.
-  # customVolumeMount: |
-  #   persistentVolumeClaim:
-  #     claimName: existing-pvc-name
+  customVolumeMount: |
+    persistentVolumeClaim:
+      claimName: pvc-dynamic
 
   # storage.slow=true to indicate slow storage used, must be set for NFS. Default is false.
   # slow: true
